--- a/canvas-dev.html
+++ b/canvas-dev.html
@@ -15,9 +15,10 @@
     </head>
     <body>
          <!-- button chain -->
-            <section class="container-button">
+            <section class="container-button" id="control-board">
                 <div class="row">
-                    <div class="btn-group-vertical">
+                        <div class="col-lg-12" id="brush-icons" style="display:none">
+                    <!-- <div class="btn-group-vertical"> -->
                         <span class="btn btn-info" id="drawing-ribbon">Drawing Ribbon</span>
                         <span class="btn btn-info" id="drawing-rectangle">Drawing Rectangle</span>
                         <span class="btn btn-info" id="drawing-rectangle-hollow">Hollow rectangle</span>
@@ -25,12 +26,13 @@
                         <span class="btn btn-info" id="drawing-circle">Drawing Circle</span>
                         <span class="btn btn-info" id="drawing-circle-hollow">Hollow Circle</span>
                         <span class="btn btn-info" id="eraser">Eraser</span>
-                        <span class="btn btn-info fa fa-upload" id="upload-img">Upload Image</span>
+                        <span class="btn btn-info" id="clear">Clear</span> 
+                        <!-- <span class="btn btn-info fa fa-upload" id="upload-img">Upload Image</span> -->
                     </div>
                 </div>
             </section>
         <!-- color-picker -->
-    <div class="container-picker">
+    <div class="container-picker" id="picker-box">
         <label for="color-input" id="color-label" style="background-color: red">
         <input type="checkbox" id="color-input" checked></input>
         </label>
@@ -41,8 +43,12 @@
         </div>
     </div>
     <div id="canvas-container">
-        <canvas id="canvas-real" class="canvas" width='800px' height='400px'></canvas>
-        <canvas id="canvas-draft" class="canvas" width='800px' height='400px'></canvas>
+        <div class="row">
+            <div class="col">
+                <canvas id="canvas-real" class="canvas"></canvas>
+                <canvas id="canvas-draft" class="canvas"></canvas>
+            </div>
+        </div>
     </div>
 <section>
     <!-- <input type="file" id="input" onchange="handleFiles(this.files)"> -->
@@ -62,8 +68,10 @@
         <script type='text/javascript' src="assets/drawing-circle.js"></script>
         <script type='text/javascript' src="assets/drawing-circle-hollow.js"></script>
         <script type='text/javascript' src="assets/eraser.js"></script>
+        <script type='text/javascript' src="assets/clear.js"></script>
         <script type='text/javascript' src="assets/color-picker.js"></script>
         <script type='text/javascript' src="assets/main.js"></script>
+        <!-- <script type='text/javascript' src="assets/sizing.js"></script> -->
         <!-- <script type='text/javascript' src="assets/upload-img.js"></script>  -->
     </body>
 </html>
