icon changed undo redo btn as comment

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 btn-default" id="insert-text"><i class="fa fa-header" aria-hidden="true"></i></div>  -->
     <div class="col-lg-12 btn-default" id="eraser"><i class="fas fa-eraser fa-lg" aria-hidden="true"></i></div>
 
-    <div class="col-lg-6  col-md-6 col-sm-6 col-xs-12 btn-default" id="undo"><i class="fas fa-undo fa-lg" aria-hidden="true"></i></div>
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 btn-default" id="redo"><i class="fas fa-redo fa-lg" aria-hidden="true"></i></div>
+    <!-- <div class="col-lg-6  col-md-6 col-sm-6 col-xs-12 btn-default" id="undo"><i class="fas fa-undo fa-lg" aria-hidden="true"></i></div>
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 btn-default" id="redo"><i class="fas fa-redo fa-lg" aria-hidden="true"></i></div> -->
     
     <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 btn-default" id="">FIll</div>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 btn-default" id="">None</div>
@@ -150,28 +150,5 @@
     <script type='text/javascript' src="nib-boardEdge.js"></script>
     <script type='text/javascript' src="nib-eEdge.js"></script>
     <script type='text/javascript' src="color-picker.js"></script> 
-    <script type="text/javascript">
-    $( document ).ready(function() {
-
-        $('#brush-button').click(function(){
-            $('#brush-icons').toggle();
-        });
-        $('#line-button').click(function(){
-            $('#line-icons').toggle();
-        });
-        $('#shape-button').click(function(){
-            $('#shape-icons').toggle();
-        });
-
-        $('#color-label').click(function(){
-        $('#color-picker').show()
-        });
-        $('#color-label').dblclick(function(){
-        $('#color-picker').hide()	
-        });
-
-    }); 
-    </script>
-    
 </body>
 </html>
