--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <i class="fas fa-minus fa-lg" id="draw-s-line3" aria-hidden="true"></i>
             <i class="fas fa-arrows-alt-h fa-lg" id="quad-curve" aria-hidden="true"></i>
             <i class="fas fa-bolt fa-lg" id="bezier-curve" aria-hidden="true"></i>
+            <i class="fas fa-bolt fa-lg" id="drawing-ellipse" aria-hidden="true"></i>
 
     </div>
     <div class="col-lg-12 btn-default" id="shape-button">Shape</div>
@@ -98,6 +99,7 @@
     <script type='text/javascript' src="js/Line/draw-s-line3.js"></script>
     <script type='text/javascript' src="js/Line/quad-curve.js"></script>
     <script type='text/javascript' src="js/Line/bezier-curve.js"></script>
+    <script type='text/javascript' src="js/drawing-ellipse.js"></script>
 
     <script type='text/javascript' src="js/Shape/drawing-rectangle-hollow.js"></script>
     <script type='text/javascript' src="js/Shape/drawing-rectangle.js"></script>
