--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
     <!-- all JS function used in the canvas app -->
     <script type='text/javascript' src="js/main.js"></script>
     <script type='text/javascript' src="js/canvas-common.js"></script>
-    <script type='text/javascript' src="js/actionlog.js"></script>
 
     <script type='text/javascript' src="js/Brush/drawing-line-smooth.js"></script>
-    <script type='text/javascript' src="js/Brush/nib-boardEdge.js"></script>
-    <script type='text/javascript' src="js/Brush/nib-eEdge.js"></script>
+    <script type='text/javascript' src="js/Brush/nib-boardEdge2.js"></script>
+    <script type='text/javascript' src="js/Brush/nib-eEdge2.js"></script>
 
     <script type='text/javascript' src="js/Line/draw-s-line3.js"></script>
     <script type='text/javascript' src="js/Line/quad-curve.js"></script>
