ellipse moved to shape (2 lines of btn) line changed to simple version

--- a/index.html
+++ b/index.html
@@ -38,19 +38,24 @@
 
         <div class="col-lg-12 btn-default" id="line-button">Line & curve</div>
     <div class="col-lg-12" id="line-icons">
-            <i class="fas fa-minus fa-lg" id="draw-s-line3" aria-hidden="true"></i>
+            <i class="fas fa-minus fa-lg" id="drawing-line" aria-hidden="true"></i>
             <i class="fas fa-arrows-alt-h fa-lg" id="quad-curve" aria-hidden="true"></i>
             <i class="fas fa-bolt fa-lg" id="bezier-curve" aria-hidden="true"></i>
-            <i class="far fa-circle" id="drawing-ellipse" aria-hidden="true"></i>
+
 
     </div>
     <div class="col-lg-12 btn-default" id="shape-button">Shape</div>
-    <div class="col-lg-12" id="shape-icons">
+    <div id="shape-icons">
+        <div class="col-lg-12">
             <i class="far fa-square fa-lg" id="drawing-rectangle-hollow" aria-hidden="true"></i>
             <i class="fas fa-square fa-lg" id="drawing-rectangle" aria-hidden="true"></i>
+        </div>
+        <div class=col-lg-12>
             <i class="fas fa-circle-notch fa-lg" id="drawing-circle-hollow" aria-hidden="true"></i>
             <i class="fas fa-circle fa-lg" id="drawing-circle" aria-hidden="true"></i>
+            <i class="far fa-circle fa-lg" id="drawing-ellipse" aria-hidden="true"></i>
         </div>
+    </div>
     <div class="container-fluid">    
     <div class="col-lg-12 btn-default" id="eraser"><i class="fas fa-eraser fa-lg" aria-hidden="true"></i></div>
     </div>
@@ -94,15 +99,15 @@
     <script type='text/javascript' src="js/Brush/nib-boardEdge2.js"></script>
     <script type='text/javascript' src="js/Brush/nib-eEdge2.js"></script>
 
-    <script type='text/javascript' src="js/Line/draw-s-line3.js"></script>
+    <script type='text/javascript' src="js/Line/drawing-line.js"></script>
     <script type='text/javascript' src="js/Line/quad-curve.js"></script>
     <script type='text/javascript' src="js/Line/bezier-curve.js"></script>
-    <script type='text/javascript' src="js/drawing-ellipse.js"></script>
 
     <script type='text/javascript' src="js/Shape/drawing-rectangle-hollow.js"></script>
     <script type='text/javascript' src="js/Shape/drawing-rectangle.js"></script>
     <script type='text/javascript' src="js/Shape/drawing-circle-hollow.js"></script>
     <script type='text/javascript' src="js/Shape/drawing-circle.js"></script>
+    <script type='text/javascript' src="js/drawing-ellipse.js"></script>
 
     <script type='text/javascript' src="js/eraser.js"></script>
     <script type='text/javascript' src="js/color-picker.js"></script> 
